fixed overflow

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -137,7 +137,7 @@ p {
 
     &__navigation {
         position: absolute;
-        top: -30%;
+        top: -50%;
         left: 0;
         transition: 0.3s;
 
@@ -216,6 +216,7 @@ p {
 
 .main {
     padding-bottom: 8rem;
+    overflow-x: hidden;
 
     @include breakpoint(laptop) {
         display: flex;
@@ -278,11 +279,12 @@ p {
     &__textWrap {
         text-align: center;
         padding: 0 1.5rem;
-        padding-left: 6rem;
 
         @include breakpoint(laptop) {
             max-width: 360px;
             text-align: left;
+            padding-left: 6rem;
+
         }
 
         @include breakpoint(laptopL) {
